--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
@@ -77,8 +77,7 @@
                     <div class="navbar-header">
 
                         <a class="navbar-brand" href="#brand">
-                            JD
-                        </a>
+                           Saket Chaudhary                       </a>
 
                     </div>
                     <!-- End Header Navigation -->
@@ -89,25 +88,16 @@
                 <div class="side">
                     <a href="#" class="close-side"><i class="fa fa-times"></i></a>
                     <div class="widget">
-                        <h6 class="title">John Doe Portfolio</h6>
+                        <h6 class="title">Saket Chaudhary</h6>
                         <ul class="link main-nav">
                             <li><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#portfolio">Portfolio</a></li>
+                            <li><a href="#about">Education</a></li>
+                            <li><a href="#Projects">Portfolio</a></li>
                             <li><a href="#choose">Choose</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="widget">
-                        <h6 class="title">Additional Links</h6>
-                        <ul class="link">
-                            <li><a href="#">Retina Homepage</a></li>
-                            <li><a href="#">New Page Examples</a></li>
-                            <li><a href="#">Parallax Sections</a></li>
-                            <li><a href="#">Shortcode Central</a></li>
-                            <li><a href="#">Ultimate Font Collection</a></li>
-                        </ul>
-                    </div>
+                                   
                 </div>
                 <!-- End Side Menu -->
             </nav>
