--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>John Doe by SNDY</title>
+        <title>Saket Chaudhary</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="favicon.ico">
@@ -64,13 +64,13 @@
 
 
             <nav class="navbar navbar-default bootsnav navbar-fixed black no-background">
-                <div class="container">  
+                <div class="container">
 
                     <div class="attr-nav">
                         <ul>
                             <li class="side-menu"><a href="#"><i class="fa fa-bars"></i></a></li>
                         </ul>
-                    </div>  
+                    </div>
 
 
                     <!-- Start Header Navigation -->
@@ -81,7 +81,7 @@
 
                     </div>
                     <!-- End Header Navigation -->
-                </div>   
+                </div>
 
 
                 <!-- Start Side Menu -->
@@ -92,12 +92,12 @@
                         <ul class="link main-nav">
                             <li><a href="#home">Home</a></li>
                             <li><a href="#about">Education</a></li>
-                            <li><a href="#Projects">Portfolio</a></li>
-                            <li><a href="#choose">Choose</a></li>
+                            <li><a href="#Projects">Projects</a></li>
+
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
-                                   
+
                 </div>
                 <!-- End Side Menu -->
             </nav>
@@ -123,11 +123,11 @@
                                     <a href="" class="btn btn-primary m-top-20">about me</a>
                                 </div>
 
-                                <a class="mouse-scroll" href="#about"> 
+                                <a class="mouse-scroll" href="#about">
                                     <span class="mouse">
                                         <span class="mouse-movement"></span>
                                     </span>
-                                    <span class="mouse-message fadeIn">scroll</span> 
+                                    <span class="mouse-message fadeIn">scroll</span>
                                 </a>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
 
 
 
-            <!--About Section--> 
+            <!--About Section-->
             <section id="about" class="about bg-light roomy-150">
                 <div class="container">
                     <div class="row">
@@ -152,8 +152,8 @@
                                         <h2>About me</h2>
                                     </div>
                                     <div class="about_content_text">
-                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. 
-                                            Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues 
+                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth.
+                                            Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues
                                             differe solmen in li grammatic.</p>
 
                                         <div class="divider1 m-top-10"></div>
@@ -226,7 +226,7 @@
                                                 <h5 class="m-top-30">Branding</h5>
                                             </div>
                                         </div>
-                                    </div> 
+                                    </div>
                                 </div>
                             </div><!-- End off col-md-6  -->
 
@@ -237,8 +237,8 @@
                                     </div>
 
                                     <div class="portfolio_content_text">
-                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, 
-                                            musica, sport etc, litot Europa usa li sam vocabular. 
+                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie,
+                                            musica, sport etc, litot Europa usa li sam vocabular.
                                             Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules.</p>
                                         <p>Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.</p>
                                     </div>
@@ -279,8 +279,8 @@
                                         <h2>what I do</h2>
                                     </div>
                                     <div class="choose_item_text">
-                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, 
-                                            musica, sport etc, litot Europa usa li sam vocabular. 
+                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie,
+                                            musica, sport etc, litot Europa usa li sam vocabular.
                                             Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules.</p>
                                         <p>Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.</p>
                                     </div>
@@ -298,7 +298,7 @@
                                         </div>
                                         <div class="list_item_text">
                                             <h5>Branding Identity</h5>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
+                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                                                 doloremque laudantium, totam rem aperiam, eaque </p>
                                         </div>
                                     </div>
@@ -308,7 +308,7 @@
                                         </div>
                                         <div class="list_item_text">
                                             <h5>UI/UX Design</h5>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
+                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                                                 doloremque laudantium, totam rem aperiam, eaque </p>
                                         </div>
                                     </div>
@@ -318,7 +318,7 @@
                                         </div>
                                         <div class="list_item_text">
                                             <h5>Logo Design</h5>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
+                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                                                 doloremque laudantium, totam rem aperiam, eaque </p>
                                         </div>
                                     </div>
@@ -328,7 +328,7 @@
                                         </div>
                                         <div class="list_item_text">
                                             <h5>Illustration</h5>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium 
+                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                                                 doloremque laudantium, totam rem aperiam, eaque </p>
                                         </div>
                                     </div>
@@ -384,14 +384,13 @@
                                     </div>
 
                                     <div class="contact_content_text">
-                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth.
-                                            Por scientie, musica, sport etc, litot Europa usa li sam vocabular.</p>
+                                        <p>I am looking for voluteering jobs</p>
 
                                         <ul class="m-top-50">
                                             <li>Lorem ipsum street 123 <br />
                                                 London.</li>
                                             <li class="phone">+62818 0977 3430</li>
-                                            <li class="info">info@email.com</li>
+                                            <li class="info">sakchy3010@gmail.com</li>
                                         </ul>
 
                                         <div class="author_text text-right">
