--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                             <div class="col-md-5 col-md-offset-1 sm-m-top-50">
                                 <div class="head_title text-right">
-                                    <h5><span class="divider"></span> my name is john doe</h5>
+                                    <h5><span class="divider"></span> my name is Saket Chaudhary</h5>
                                 </div>
                                 <div class="about_left_item m-top-50">
                                     <img src="assets/images/about-img1.jpg" alt="" />
@@ -387,19 +387,17 @@
                                         <p>I am looking for voluteering jobs</p>
 
                                         <ul class="m-top-50">
-                                            <li>Lorem ipsum street 123 <br />
-                                                London.</li>
-                                            <li class="phone">+62818 0977 3430</li>
+
                                             <li class="info">sakchy3010@gmail.com</li>
                                         </ul>
 
                                         <div class="author_text text-right">
                                             <h5>Regards!</h5>
-                                            <h1>John Doe</h1>
-                                            <h6>UI/UX & Web Designer</h6>
+                                            <h1> Saket Chaudhary</h1>
+                                            <h6>Automation Engineer</h6>
                                         </div>
                                         <div class="copyright text-right m-top-80">
-                                            <p class="wow fadeInRight">Made with <i class="fa fa-heart"></i> by <a href="http://bootstrapthemes.co">Bootstrap Themes</a>2016. All Rights Reserved</p>
+                                            <p class="wow fadeInRight"> 2018 All Rights Reserved</p>
                                         </div>
                                     </div>
                                 </div>
