--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="home_text text-left">
-                                    <h4>Hello fellas, I’m a freelance</h4>
-                                    <h1 class="text-black">#webdesigner</h1>
+                                    <h4> I’m a freelance developer. I design circuits and develop PLC programs.</h4>
+                                    <h1 class="text-black">Automation Engineer</h1>
                                 </div>
 
                                 <div class="home_btns m-top-40 text-center">
@@ -152,16 +152,26 @@
                                         <h2>About me</h2>
                                     </div>
                                     <div class="about_content_text">
-                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth.
-                                            Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues
-                                            differe solmen in li grammatic.</p>
-
                                         <div class="divider1 m-top-10"></div>
 
                                         <div class="about_content_item m-top-30">
                                             <h6><i class="fa fa-graduation-cap"></i> Education History</h6>
                                             <ul>
-                                                <li><a href=""><i class="fa fa-chevron-right"></i>School of Design</a></li>
+                                                <li><a href=""><i class="fa fa-chevron-right"></i>National Institute of Technology Jamshedpur</a></li>
+                                                <ul>
+                                                    <li><a href=""></i>Bachelor Of Technology CGPA 9.12/10 Class Rank 3/91</a></li>
+
+                                                </ul>
+                                                <li><a href=""><i class="fa fa-chevron-right"></i>DAV Public School Koyla Nagar Dhanbad</a></li>
+                                                <ul>
+                                                    <li><a href=""></i>AISSCE Senior School Certificate Examination CBSE Board 85.6% Marks</a></li>
+
+                                                </ul>
+                                                <li><a href=""><i class="fa fa-chevron-right"></i>Dhanbad Public School Dhanbad</a></li>
+                                                <ul>
+                                                    <li><a href=""></i>AISSE Secondary School Examination CBSE Board 86.2% Marks</a></li>
+                                                    
+                                                </ul>
                                             </ul>
                                         </div>
                                         <div class="about_content_item m-top-20">
