--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <div class="col-sm-6">
                                 <div class="home_text text-left">
                                     <h4> I’m a freelance developer. I design circuits and develop PLC programs.</h4>
-                                    <h1 class="text-black">Automation Engineer</h1>
+
                                 </div>
 
                                 <div class="home_btns m-top-40 text-center">
@@ -164,22 +164,23 @@
                                                 </ul>
                                                 <li><a href=""><i class="fa fa-chevron-right"></i>DAV Public School Koyla Nagar Dhanbad</a></li>
                                                 <ul>
-                                                    <li><a href=""></i>AISSCE Senior School Certificate Examination CBSE Board 85.6% Marks</a></li>
+                                                    <li><a href=""></i>AISSCE CBSE Board 85.6% Marks</a></li>
 
                                                 </ul>
                                                 <li><a href=""><i class="fa fa-chevron-right"></i>Dhanbad Public School Dhanbad</a></li>
                                                 <ul>
-                                                    <li><a href=""></i>AISSE Secondary School Examination CBSE Board 86.2% Marks</a></li>
-                                                    
+                                                    <li><a href=""></i>AISSE CBSE Board 86.2% Marks</a></li>
+
                                                 </ul>
                                             </ul>
                                         </div>
                                         <div class="about_content_item m-top-20">
                                             <h6><i class="fa fa-briefcase"></i> Work Experiences</h6>
                                             <ul>
-                                                <li><i class="fa fa-chevron-right"></i>London Studio | 2012</li>
-                                                <li><i class="fa fa-chevron-right"></i>Envato Designer | 2013</li>
-                                                <li><i class="fa fa-chevron-right"></i>Dribbble | 2015</li>
+                                                <li><i class="fa fa-chevron-right"></i>Tata Steel TSK Coke Plant | Present</li>
+                                                <li><i class="fa fa-chevron-right"></i>Tata Steel TSK Central Electronics & Instrumentation| 2017</li>
+                                                <li><i class="fa fa-chevron-right"></i>Tata Steel TSK Steel Melting Shop | 2016</li>
+                                                <li><i class="fa fa-chevron-right"></i>Tata Steel JSR I Blast Furnace | 2014</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -188,7 +189,7 @@
 
                             <div class="col-md-5 col-md-offset-1 sm-m-top-50">
                                 <div class="head_title text-right">
-                                    <h5><span class="divider"></span> my name is Saket Chaudhary</h5>
+                                    <h5><span class="divider"></span> Saket Chaudhary</h5>
                                 </div>
                                 <div class="about_left_item m-top-50">
                                     <img src="assets/images/about-img1.jpg" alt="" />
@@ -221,19 +222,19 @@
                             <div class="col-md-5">
                                 <div class="portfolio_item">
                                     <div class="head_title">
-                                        <h5><span class="divider"></span> my latest works</h5>
+                                        <h5><span class="divider"></span> My Latest Projects</h5>
                                     </div>
                                     <div class="row m-top-60">
                                         <div class="col-sm-6">
                                             <div class="portf_item_text photography">
                                                 <a href="assets/images/portfolio-1.jpg" class="popup-img"><img src="assets/images/portfolio-1.jpg" alt="" /></a>
-                                                <h5 class="m-top-30">Photography</h5>
+                                                <h5 class="m-top-30">Automation</h5>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="portf_item_text branding xs-m-top-40">
                                                 <a href="assets/images/portfolio-1.jpg" class="popup-img"><img src="assets/images/portfolio-2.jpg" alt="" /></a>
-                                                <h5 class="m-top-30">Branding</h5>
+                                                <h5 class="m-top-30">Design</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -247,10 +248,10 @@
                                     </div>
 
                                     <div class="portfolio_content_text">
-                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie,
-                                            musica, sport etc, litot Europa usa li sam vocabular.
-                                            Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules.</p>
-                                        <p>Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.</p>
+                                        <p>Presently I am working for design and commissioning of Phase 2
+                                          expansion project of Kalinganagar Tata Steel, which is the largest green field project in India.</p>
+                                        <p>I have executed different automation projects and used
+                                          OpenCV for Python for creating innovative solutions through Computer Vision.</p>
                                     </div>
                                 </div>
 
@@ -289,14 +290,13 @@
                                         <h2>what I do</h2>
                                     </div>
                                     <div class="choose_item_text">
-                                        <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie,
-                                            musica, sport etc, litot Europa usa li sam vocabular.
-                                            Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules.</p>
-                                        <p>Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.</p>
+                                        <p>My skills include PLC programming and Electrical Drives Commissioning.
+                                           I have installed and programmed drives of Siemens and ABB.
+                                           From 415Volt to MV Drive from servo control to synchronous LCI Drives.
+                                         I have also designed many websites and mobile applications </p>
+                                        <p>I have worked in the field of Electrical for almost 6 years. I also have knowledge of Power System.</p>
                                     </div>
-                                    <div class="choose_btn text-center m-top-100">
-                                        <a href="" class="btn btn-primary">hire me</a>
-                                    </div>
+
                                 </div>
                             </div> <!-- End off col-md-6 -->
 
@@ -307,9 +307,8 @@
                                             <i class="fa fa-diamond"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5>Branding Identity</h5>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                                doloremque laudantium, totam rem aperiam, eaque </p>
+                                            <h5>PLC & Drives </h5>
+                                            <p>ABB ACS 2000 ACS 1000 and ACS 800. Siemens Robicon GH180 G120 S120. Siemens Simatic Manager</p>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
@@ -317,7 +316,7 @@
                                             <i class="fa fa-tablet"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5>UI/UX Design</h5>
+                                            <h5>Power System</h5>
                                             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                                                 doloremque laudantium, totam rem aperiam, eaque </p>
                                         </div>
