--- a/index.html
+++ b/index.html
@@ -256,9 +256,7 @@
                                 </div>
 
                                 <div class="may_client m-top-50">
-                                    <div class="head_title text-right">
-                                        <h5><span class="divider"></span> my clients</h5>
-                                    </div>
+
                                     <div class="client_brand m-top-60 text-right">
                                         <ul class="list-inline">
                                             <li><img src="assets/images/clogo1.png" alt="" /></li>
@@ -304,7 +302,7 @@
                                 <div class="choose_list fix">
                                     <div class="choose_list_item fix">
                                         <div class="choose_icon">
-                                            <i class="fa fa-diamond"></i>
+                                            <i class="fa fa-tablet"></i>
                                         </div>
                                         <div class="list_item_text">
                                             <h5>PLC & Drives </h5>
@@ -317,8 +315,8 @@
                                         </div>
                                         <div class="list_item_text">
                                             <h5>Power System</h5>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                                doloremque laudantium, totam rem aperiam, eaque </p>
+                                            <p>Knowldge of 6.6kV SwitchBoard. ETAP Relay Coordination and Load overflow.LV Switchgear and EOCR Setting
+                                          </p>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
@@ -326,9 +324,9 @@
                                             <i class="fa fa-send-o"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5>Logo Design</h5>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                                doloremque laudantium, totam rem aperiam, eaque </p>
+                                            <h5>Instrumentation</h5>
+                                            <p>Thermocouple, RTD, Flow meters, Ultrasonic Level Sensors,
+                                              Berthold Scintillation Counters, LVDTs of Temposonic and MTS make </p>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
@@ -336,9 +334,9 @@
                                             <i class="fa  fa-pencil"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5>Illustration</h5>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                                doloremque laudantium, totam rem aperiam, eaque </p>
+                                            <h5>Web and Mobile Development</h5>
+                                            <p>Worked on Azure Cloud, Microsoft PowerBI, PowerApps and Advanced Excel.
+                                               Android mobile development. Full Stack Developer </p>
                                         </div>
                                     </div>
                                 </div>
@@ -393,12 +391,12 @@
                                     </div>
 
                                     <div class="contact_content_text">
-                                        <p>I am looking for voluteering jobs</p>
 
-                                        <ul class="m-top-50">
+
+
 
                                             <li class="info">sakchy3010@gmail.com</li>
-                                        </ul>
+
 
                                         <div class="author_text text-right">
                                             <h5>Regards!</h5>
