--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="home_text text-left">
-                                    <h4> I’m a freelance developer. I design circuits and develop PLC programs.</h4>
+
 
                                 </div>
 
@@ -177,10 +177,10 @@
                                         <div class="about_content_item m-top-20">
                                             <h6><i class="fa fa-briefcase"></i> Work Experiences</h6>
                                             <ul>
-                                                <li><i class="fa fa-chevron-right"></i>Tata Steel TSK Coke Plant | Present</li>
-                                                <li><i class="fa fa-chevron-right"></i>Tata Steel TSK Central Electronics & Instrumentation| 2017</li>
-                                                <li><i class="fa fa-chevron-right"></i>Tata Steel TSK Steel Melting Shop | 2016</li>
-                                                <li><i class="fa fa-chevron-right"></i>Tata Steel JSR I Blast Furnace | 2014</li>
+                                                <li><i class="fa fa-chevron-right"></i>Design of mobile applications</li>
+                                                <li><i class="fa fa-chevron-right"></i>Design of website with PHP backend program for user management</li>
+                                                <li><i class="fa fa-chevron-right"></i>Design of Arduino and Raspberry Projects</li>
+                                                <li><i class="fa fa-chevron-right"></i>Design of Unity 3D games and Blender</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -248,8 +248,6 @@
                                     </div>
 
                                     <div class="portfolio_content_text">
-                                        <p>Presently I am working for design and commissioning of Phase 2
-                                          expansion project of Kalinganagar Tata Steel, which is the largest green field project in India.</p>
                                         <p>I have executed different automation projects and used
                                           OpenCV for Python for creating innovative solutions through Computer Vision.</p>
                                     </div>
