--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                     <div class="row">
                         <div class="main_contact">
                             <div class="head_title">
-                                <h5><span class="divider"></span> Get enquiries now</h5>
+                                <h5><span class="divider"></span> Contact with Mail</h5>
                             </div>
                             <div class="col-md-5">
                                 <form class="m-top-50">
@@ -363,15 +363,15 @@
                                         <input type="text" class="form-control" placeholder="your e-mail">
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="your budget">
+                                        <input type="text" class="form-control" placeholder="your project">
                                     </div>
                                     <div class="form-group">
                                         <select class="form-control">
-                                            <option>type of proroject</option>
-                                            <option>type</option>
-                                            <option>proroject</option>
-                                            <option>of</option>
-                                            <option>5</option>
+                                            <option>Suggestions</option>
+                                            <option>Illustrations</option>
+                                            <option>Idea Generation</option>
+                                            <option>Volunteer</option>
+                                            
                                         </select>
                                     </div>
                                     <div class="form-group">
@@ -393,7 +393,6 @@
 
 
 
-                                            <li class="info">sakchy3010@gmail.com</li>
 
 
                                         <div class="author_text text-right">
